--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-forge",
+  "name": "korea-forge",
   "version": "1.3.2-0",
   "description": "JavaScript implementations of network transports, cryptography, ciphers, PKI, message digests, and various utilities.",
   "homepage": "https://github.com/digitalbazaar/forge",
@@ -53,11 +53,13 @@
   },
   "license": "(BSD-3-Clause OR GPL-2.0)",
   "main": "lib/index.js",
+  "types": "index.d.ts",
   "files": [
     "lib/*.js",
     "flash/swf/*.swf",
     "dist/*.min.js",
-    "dist/*.min.js.map"
+    "dist/*.min.js.map",
+    "index.d.ts"
   ],
   "engines": {
     "node": ">= 6.13.0"
@@ -105,7 +107,8 @@
     "coverage": "rm -rf coverage && nyc --reporter=lcov --reporter=text-summary npm test",
     "coverage-ci": "rm -rf coverage && nyc --reporter=lcovonly npm test",
     "coverage-report": "nyc report",
-    "lint": "eslint *.js lib/*.js tests/*.js tests/**/*.js examples/*.js flash/*.js"
+    "lint": "eslint *.js lib/*.js tests/*.js tests/**/*.js examples/*.js flash/*.js",
+    "AAAA": "node mytest/a.js"
   },
   "nyc": {
     "exclude": [
