--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "korea-forge",
-  "version": "1.3.2-0",
+  "version": "1.3.2-jclab02",
   "description": "JavaScript implementations of network transports, cryptography, ciphers, PKI, message digests, and various utilities.",
   "homepage": "https://github.com/digitalbazaar/forge",
   "author": {
@@ -45,10 +45,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/digitalbazaar/forge"
+    "url": "https://github.com/jc-lab/korea-forge"
   },
   "bugs": {
-    "url": "https://github.com/digitalbazaar/forge/issues",
+    "url": "https://github.com/jc-lab/korea-forge/issues",
     "email": "support@digitalbazaar.com"
   },
   "license": "(BSD-3-Clause OR GPL-2.0)",
